--- a/BLAZAM/Pages/Install/ADirectory.razor
+++ b/BLAZAM/Pages/Install/ADirectory.razor
@@ -10,7 +10,7 @@
         <BLAZAM.Server.Shared.UI.Settings.ActiveDirectoryStatusPanel DirectoryConnected="ShowNext"/>
         <br/>
         <br/>
-        <Button Color="Color.Success" @onclick="Refresh" Disabled="@disableNext">Proceed</Button>
+        <MudButton Color="Color.Success" @onclick="Refresh" Disabled="@disableNext">Proceed</MudButton>
     </div>
 
 @code {
