--- a/BLAZAM/Pages/Login.razor
+++ b/BLAZAM/Pages/Login.razor
@@ -7,69 +7,69 @@
 @{
     var redirectUrl = Nav.Uri;
 }
-<Heading Padding="Padding.Is4.FromBottom">
+
+<MudText Typo ="Typo.h1">
 
 
     @DatabaseCache.ApplicationSettings?.AppName
 
-</Heading>
+</MudText>
 
 
 
-<Div class="brand-icon">
-    <Image Source="@StaticAssets.ApplicationIconUri" />
+<div class="brand-icon">
+    <MudImage Src="@StaticAssets.ApplicationIconUri" />
 
-</Div>
+</div>
 
 @if (!Program.InDemoMode || DemoCustomLogin)
 {
-    <Form Class="login-form" method="post" action="/signin" TextAlignment="TextAlignment.Center" >
+    <form class="login-form" method="post" action="/signin">
 
-        <Field>
-            <FieldBody>
-                <TextEdit Autofocus TextAlignment="TextAlignment.Center" Placeholder="Username" name="username" @bind-Text=LoginRequest.Username>
-                    <Feedback>
-                        <ValidationError />
-                    </Feedback>
-                </TextEdit>
-            </FieldBody>
-        </Field>
-        <Field>
-            <FieldBody>
-                <TextEdit TextAlignment="TextAlignment.Center" Placeholder="Password" name="password" Role="TextRole.Password" @bind-Text=LoginRequest.Password>
-                    <Feedback>
-                        <ValidationError />
-                    </Feedback>
-                </TextEdit>
-            </FieldBody>
-                </Field>        
-                <TextEdit Visibility=Visibility.Invisible name="ReturnUrl" Text="@redirectUrl" />
+        <MudField>
+
+            <MudTextField Placeholder="Username" name="username" @bind-Value=LoginRequest.Username>
 
 
-        <Button Margin=Margin.IsAuto.OnX.Is2.FromTop Type=ButtonType.Submit Color="Color.Primary">@AppLocalization["Log In"]</Button><br />
-    </Form>
+
+            </MudTextField>
+
+        </MudField>
+        <MudField>
+
+            <MudTextField Placeholder="Password" name="password" InputType="InputType.Password" @bind-Value=LoginRequest.Password>
+
+
+
+            </MudTextField>
+
+        </MudField>
+        <MudTextField hidden name="ReturnUrl" Value="@redirectUrl" />
+
+
+        <MudButton ButtonType=ButtonType.Submit Color="Color.Primary">@AppLocalization["Log In"]</MudButton><br />
+    </form>
 
 }
 @if (Program.InDemoMode)
 {
-    <Form Class="login-form" method="post" action="/signin" TextAlignment="TextAlignment.Center">
+    <form Class="login-form" method="post" action="/signin">
 
-        <TextEdit Autofocus TextAlignment="TextAlignment.Center" name="username" Text="demo" Display="Display.None" />
-        <TextEdit TextAlignment="TextAlignment.Center" name="password" Role="TextRole.Password" Text="demo" Display="Display.None" />
-        <TextEdit Visibility=Visibility.Invisible name="ReturnUrl" Text="@redirectUrl" />
+        <MudTextField name="username" Value=@("demo") hidden />
+        <MudTextField name="password" InputType="InputType.Password" Value=@("demo") hidden />
+        <MudTextField hidden name="ReturnUrl" Value="@redirectUrl" />
 
-        <Dropdown Margin=Margin.IsAuto.OnX.Is2.FromTop>
-        <Button Type=ButtonType.Submit Color="Color.Primary">@AppLocalization["Log In To Demo"]</Button>
-        <DropdownToggle Color="Color.Primary" Split />
-            <DropdownMenu>
-                <DropdownItem Clicked=@(()=>{ DemoCustomLogin=true;InvokeAsync(StateHasChanged); })>@AppLocalization["Custom Login"]</DropdownItem>
-            </DropdownMenu>
-        </Dropdown>
+        <MudButtonGroup>
+            <MudButton Type=ButtonType.Submit Color="Color.Primary">@AppLocalization["Log In To Demo"]</MudButton>
+            <MudMenu Color="Color.Primary">
+                <MudMenuItem Clicked=@(()=>{ DemoCustomLogin=true;InvokeAsync(StateHasChanged); })>@AppLocalization["Custom Login"]</MudMenuItem>
+            </MudMenu>
+        </MudButtonGroup>
 
-    </Form>
+    </form>
 
 }
-<Copyright Margin=Margin.IsAuto.OnX Padding="Padding.Is5.FromTop" />
+<Copyright/>
 <style>
     .brand-icon {
         position: fixed;
