--- a/BLAZAM/Shared/Layouts/ErrorLayout.razor
+++ b/BLAZAM/Shared/Layouts/ErrorLayout.razor
@@ -17,21 +17,21 @@
 
         </LayoutSiderContent>
     </LayoutSider>
-    <Layout>
-        <LayoutContent>
-            <Card Margin="Margin.Is4.OnX.OnDesktop">
-                <CardBody>
+    <MudLayout>
+        <MudMainContent>
+            <MudCard Margin="Margin.Is4.OnX.OnDesktop">
+                <MudCardBody>
                     @Body
                     <Link To="/">
-                    <Button  Color="Color.Primary">Try Home Page</Button>
+                    <MudButton  Color="Color.Primary">Try Home Page</MudButton>
                     </Link>
-                </CardBody>
-            </Card>
-        </LayoutContent>
+                </MudCardBody>
+            </MudCard>
+        </MudMainContent>
          <LayoutFooter>
             <AppFooter />
 
         </LayoutFooter>
-    </Layout>
-</Layout>
+    </MudLayout>
+</MudLayout>
 
