--- a/BLAZAM/Shared/Loader.razor
+++ b/BLAZAM/Shared/Loader.razor
@@ -1,5 +1,13 @@
-﻿@inherits Blazorise.BaseComponent
-<Div Margin=@Margin Padding=@Padding Display="@Display" Background="@Background" TextColor="@TextColor" TextAlignment=@TextAlignment class="straight-loader"/>
+﻿
+<MudElement 
+     
+   @* Margin=@Margin 
+    Padding=@Padding 
+    Display="@Display" 
+    Background="@Background" 
+    TextColor="@TextColor" 
+    TextAlignment=@TextAlignment *@
+    class="straight-loader"/>
 <style>
 .straight-loader,
 .straight-loader:before,
