--- a/BLAZAM/Shared/Navs/ErrorMenu.razor
+++ b/BLAZAM/Shared/Navs/ErrorMenu.razor
@@ -9,7 +9,7 @@
     <BarBrand>
         <BarItem onclick=@(()=>{Nav.NavigateTo("/",true);})>
           
-                <Image class="app-icon" src="@StaticAssets.ApplicationIconUri" />
+                <MudImage class="app-icon" src="@StaticAssets.ApplicationIconUri" />
                
         </BarItem>
     </BarBrand>
