--- a/BLAZAM/Shared/UI/AppCloseButton.razor
+++ b/BLAZAM/Shared/UI/AppCloseButton.razor
@@ -1,5 +1,5 @@
 ﻿@inherits BaseComponent
-<Div id="@ElementId"
+<div id="@ElementId"
      type="button"
      disabled="@DisabledString"
      aria-label="Close"
@@ -24,7 +24,7 @@
     <Icon Name=@("fa-times")
           @onclick=@ClickHandler
           style="text-align: center; vertical-align: middle; padding:0.5rem; cursor:pointer; width: 2em; height: 2em;border: 0; border-radius: 0.5rem;" />
-</Div>
+</div>
 @code {
 
 }
