--- a/BLAZAM/Shared/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -1,14 +1,14 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-<Div Background="Background.Secondary" TextColor="TextColor.Light">
+<div Background="Background.Secondary" >
 
     <h3>User passwords changed in the last 90 days</h3>
 
-    <Div Overflow="Overflow.Auto" Style="max-height:350px;">
+    <div Overflow="Overflow.Auto" Style="max-height:350px;">
         @foreach (var user in LockedUsers)
         {
 
-            <Card @onclick="@(()=>{Nav.NavigateTo("/users/search/" + user.SamAccountName);})">
+            <MudCard @onclick="@(()=>{Nav.NavigateTo("/users/search/" + user.SamAccountName);})">
 
 
                 @user.DisplayName <br>
@@ -17,11 +17,11 @@
 
                 @user.PasswordLastSet <br>
 
-            </Card>
+            </MudCard>
 
         }
-    </Div>
-</Div>
+    </div>
+</div>
 @code {
     List<IADUser> LockedUsers = new();
 
