--- a/BLAZAM/Shared/UI/SessionExpirationWarningProvider.razor
+++ b/BLAZAM/Shared/UI/SessionExpirationWarningProvider.razor
@@ -32,19 +32,19 @@
                 InvokeAsync(StateHasChanged);
             });
         }
-        <Div Background="Background.Light" TextColor="TextColor.Dark">
+        <div Background="Background.Light" TextColor="Color.Dark">
             <Row>
-                <Field>
-                    <FieldLabel>
+                <MudField>
+                    <MudText>
                         Session expires in @formattedTimeLeft
-                    </FieldLabel>
-                </Field>
+                    </MudText>
+                </MudField>
             </Row>
             <Row>
-                <Button Color="Color.Primary" Clicked=@(()=>{JSRuntime.InvokeVoidAsync("updateCookieExpiration");ExpirationWarningModal.Hide();})>Refresh Session</Button>
+                <MudButton Color="Color.Primary" Clicked=@(()=>{JSRuntime.InvokeVoidAsync("updateCookieExpiration");ExpirationWarningModal.Hide();})>Refresh Session</MudButton>
 
             </Row>
-        </Div>
+        </div>
     }
 
     </AppModal>
@@ -52,18 +52,18 @@
 
     @if (ExpiredModal?.IsShown == true)
     {
-        <Div Background="Background.Light" TextColor="TextColor.Dark">
+        <div Background="Background.Light" TextColor="Color.Dark">
             <Row>
-                <Field>
-                    <FieldLabel>Your session has expired.</FieldLabel>
+                <MudField>
+                    <MudText>Your session has expired.</MudText>
                    
-                </Field>
+                </MudField>
             </Row>
             <Row>
-                <Button Color="Color.Primary" Clicked=@(()=>{JSRuntime.InvokeVoidAsync("updateCookieExpiration");ExpirationWarningModal.Hide();})>Log In</Button>
+                <MudButton Color="Color.Primary" Clicked=@(()=>{JSRuntime.InvokeVoidAsync("updateCookieExpiration");ExpirationWarningModal.Hide();})>Log In</MudButton>
 
             </Row>
-        </Div>
+        </div>
     }
 
 </AppModal>
