--- a/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -1,10 +1,10 @@
 ﻿@using System.DirectoryServices;
 @inherits AppComponentBase
-<Card>
-    <CardHeader>
+<MudCard>
+    <MudCardHeader>
         Active Directory Connection Status
-    </CardHeader>
-    <CardBody>
+    </MudCardHeader>
+    <MudCardBody>
 
         <Row>
             <Column>
@@ -39,9 +39,9 @@
 
             </Column>
         </Row>
-    </CardBody>
+    </MudCardBody>
     <Progress Value="100" Animated Striped Visibility=@showProgress />
-    </Card>
+    </MudCard>
     @{
 
 
