--- a/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
+++ b/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
@@ -4,169 +4,126 @@
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
 
-        <Heading>@SettingsLocalization["Active Directory Settings"]</Heading>
+    <MudText Typo="Typo.h1">@SettingsLocalization["Active Directory Settings"]</MudText>
 
-        @* <Column ColumnSize="ColumnSize.Is4.OnDesktop">
-        <ActiveDirectoryStatusPanel />
-        </Column>*@
-        <Column ColumnSize="ColumnSize.Is12.OnDesktop">
-            <Form @onsubmit="Save">
-                <Validations @ref="Validation" Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
+    <MudForm @onsubmit="Save">
 
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>@SettingsLocalization["Server"]</FieldLabel>
-                            <FieldHelp>Can be your domain name in most environments</FieldHelp>
-                            <FieldBody>
-                                @if (Program.InDemoMode && UserStateService.CurrentUsername != "admin")
-                                {
+        <SettingsField>
 
-                                    <TextEdit Text="Private" Disabled>
-                                    <Feedback>
-                                        <ValidationError />
-                                    </Feedback>
-                                </TextEdit>
-                                }
-                                else
-                                {
 
-                                    <TextEdit @bind-Text="@settings.ServerAddress">
-                                        <Feedback>
-                                            <ValidationError />
-                                        </Feedback>
-                                    </TextEdit>
+            @if (Program.InDemoMode && UserStateService.CurrentUsername != "admin")
+            {
 
-                                }
-                            </FieldBody>
-                        </SettingsField>
-                    </Validation>
+                <MudTextField HelperText="Can be your domain name in most environments" Label="@SettingsLocalization["Server"]" Value=@("Private") Disabled />
+            }
+            else
+            {
 
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>
-                                @SettingsLocalization["Port"]
-                            </FieldLabel>
-                            <FieldHelp>
-                                The default port of 389 is the recommended port to use.
-                                <Tooltip Display="Display.InlineBlock" Multiline Style="max-width:300px" Text="The application will automatically use an SSL
-                                            connection if the server's CA Certificate is a trusted CA on this web server. Using port 636 can work,
-                                            but may lead to unexpected behaviour of other services that listen to Active Directory changes.">
-                                    <Icon Name="IconName.QuestionCircle" TextColor="TextColor.Info" />
-                                </Tooltip>
-                            </FieldHelp>
-                            <FieldBody>
-                                @if (Program.InDemoMode && UserStateService.CurrentUsername != "admin")
-                                {
-                                    <NumericEdit Margin=Margin.IsAuto.OnY Value="0" Disabled>
-                                    <Feedback>
-                                        <ValidationError />
-                                    </Feedback>
-                                </NumericEdit>
-                                }
-                                else
-                                {
-
-                                    <NumericEdit Margin=Margin.IsAuto.OnY @bind-Value="@settings.ServerPort">
-                                        <Feedback>
-                                            <ValidationError />
-                                        </Feedback>
-                                    </NumericEdit>
-
-                                }
-
-                            </FieldBody>
+                <MudTextField HelperText="Can be your domain name in most environments" Label="@SettingsLocalization["Server"]" @bind-Value="@settings.ServerAddress">
 
 
 
-                        </SettingsField>
+                </MudTextField>
 
-                    </Validation>
+            }
 
+        </SettingsField>
+        <SettingsField>
 
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>@SettingsLocalization["Username"]</FieldLabel>
-                            <FieldBody>
-                                <TextEdit name="username" @bind-Text="@settings.Username">
-                                    <Feedback>
-                                        <ValidationError />
-                                    </Feedback>
-                                </TextEdit>
-                            </FieldBody>
-                        </SettingsField>
+            @{
+                string helperText = "The default port of 389 is the recommended port to use.";
+            }
 
-                    </Validation>
+            @*
+            TODO Add this as a popover
+            <MudTooltip Display="Display.InlineBlock" Multiline Style="max-width:300px" Text="The application will automatically use an SSL
+            connection if the server's CA Certificate is a trusted CA on this web server. Using port 636 can work,
+            but may lead to unexpected behaviour of other services that listen to Active Directory changes.">
+            <Icon Name="IconName.QuestionCircle" TextColor="Color.Info" />
+            </MudTooltip>*@
 
-
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>@SettingsLocalization["Password"]</FieldLabel>
-                            <FieldBody>
-                                <TextEdit name="password" Role="TextRole.Password" @bind-Text="@settings.Password">
-                                    <Feedback>
-                                        <ValidationError />
-                                    </Feedback>
-                                </TextEdit>
-                            </FieldBody>
-                        </SettingsField>
-
-                    </Validation>
+            @if (Program.InDemoMode && UserStateService.CurrentUsername != "admin")
+            {
+                <MudNumericField HelperText="@helperText" Label="@SettingsLocalization["Port"]" HideSpinButtons="true" Value="0" Disabled />
 
 
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>@SettingsLocalization["UseTLS"]</FieldLabel>
-                            <FieldBody>
-                                <Switch TValue="bool" @bind-Checked="@settings.UseTLS" />
-                            </FieldBody>
-                        </SettingsField>
+            }
+            else
+            {
 
-                    </Validation>
+                <MudNumericField HelperText="@helperText" Label="@SettingsLocalization["Port"]" HideSpinButtons="true" @bind-Value="@settings.ServerPort" />
 
 
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>@SettingsLocalization["FQDN"]</FieldLabel>
-                            <FieldBody>
-                                <TextEdit name="fqdn" @bind-Text="@settings.FQDN">
-                                    <Feedback>
-                                        <ValidationError />
-                                    </Feedback>
-                                </TextEdit>
-                            </FieldBody>
-                        </SettingsField>
-
-                    </Validation>
 
 
-                    <Validation>
-                        <SettingsField>
-                            <FieldLabel>@SettingsLocalization["BaseDN"]</FieldLabel>
-                            <FieldBody>
-                                <TextEdit name="baseDN" @bind-Text="@settings.ApplicationBaseDN">
-                                    <Feedback>
-                                        <ValidationError />
-                                    </Feedback>
-                                </TextEdit>
-                            </FieldBody>
-                        </SettingsField>
+            }
 
-                    </Validation>
 
-                    <SettingsField>
-                        <FieldBody>
-                            <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
-                        </FieldBody>
-                    </SettingsField>
-                </Validations>
-            </Form>
-        </Column>
+
+
+
+        </SettingsField>
+
+
+
+        <SettingsField>
+
+            <MudTextField Label="@SettingsLocalization["Username"]" name="username" @bind-Value="@settings.Username">
+
+
+
+            </MudTextField>
+
+        </SettingsField>
+
+
+
+        <SettingsField>
+
+            <MudTextField Label="@SettingsLocalization["Password"]" name="password" InputType="InputType.Password" @bind-Value="@settings.Password">
+
+
+
+            </MudTextField>
+
+        </SettingsField>
+
+
+
+        <SettingsField>
+
+            <MudSwitch Label="@SettingsLocalization["UseTLS"]" TValue="bool" @bind-Checked="@settings.UseTLS" />
+
+        </SettingsField>
+
+
+
+        <SettingsField>
+
+            <MudTextField Label="@SettingsLocalization["FQDN"]" name="fqdn" @bind-Value="@settings.FQDN" />
+
+        </SettingsField>
+
+
+
+        <SettingsField>
+
+            <MudTextField Label="@SettingsLocalization["BaseDN"]" name="baseDN" @bind-Value="@settings.ApplicationBaseDN" />
+
+        </SettingsField>
+
+
+        <SettingsField>
+
+            <MudButton Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+
+        </SettingsField>
+    </MudForm>
 </LoadingIndicator>
 @code {
 
 #nullable disable warnings
     ADSettings settings = new ADSettings();
-    Validations? Validation;
     bool _insert;
 
     string passwordInDb;
@@ -193,21 +150,21 @@
     }
     protected override async void Save()
     {
-        if (await Validation.ValidateAll())
+        //if (await Validation.ValidateAll())
+        //{
+        if (!settings.Password.Equals(passwordInDb))
         {
-            if (!settings.Password.Equals(passwordInDb))
-            {
-                settings.Password = EncryptionService.EncryptObject(settings.Password);
-                passwordInDb = settings.Password;
-            }
-            if (_insert)
-            {
-                Context.ActiveDirectorySettings.Add(settings);
-                _insert = false;
-            }
-            AuditLogger.System.SettingsChanged("Active Directory", settings.GetChanges(originalSettings));
-            base.Save();
+            settings.Password = EncryptionService.EncryptObject(settings.Password);
+            passwordInDb = settings.Password;
         }
+        if (_insert)
+        {
+            Context.ActiveDirectorySettings.Add(settings);
+            _insert = false;
+        }
+        AuditLogger.System.SettingsChanged("Active Directory", settings.GetChanges(originalSettings));
+        base.Save();
+        //}
 
     }
 
