--- a/BLAZAM/Shared/UI/Settings/SettingsField.razor
+++ b/BLAZAM/Shared/UI/Settings/SettingsField.razor
@@ -1,18 +1,18 @@
 <Row Margin=Margin.Is3.OnX.Is1.FromBottom>
-    <Field Horizontal>
+    <MudField>
 
-        <FieldLabel Margin=Margin.IsAuto.OnY ColumnSize="ColumnSize.Is2.OnDesktop">
+        <MudFieldLabel Margin=Margin.IsAuto.OnY ColumnSize="ColumnSize.Is2.OnDesktop">
             @FieldLabel
 
         </FieldLabel>
-        <FieldBody Margin=Margin.IsAuto.OnY ColumnSize="ColumnSize.Is10">
+        <MudFieldBody Margin=Margin.IsAuto.OnY ColumnSize="ColumnSize.Is10">
            
             @FieldBody
-            <FieldHelp>
+            <MudFieldHelp>
                 @FieldHelp
             </FieldHelp>
-        </FieldBody>
-    </Field>
+        
+    </MudField>
 </Row>
 @code {
 
