--- a/BLAZAM/Shared/UI/Settings/SystemSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/SystemSettings.razor
@@ -1,38 +1,38 @@
 @inherits SettingsComponents
 @using System.IO.Compression;
 @using BLAZAM.Common.Extensions;
-    <Heading>@SettingsLocalization["System Settings"]</Heading>
-    <Form @onsubmit="Save">
+    <MudText Typo ="Typo.h1">@SettingsLocalization["System Settings"]</MudText>
+    <MudForm @onsubmit="Save">
     @if (settings != null)
     {
         <SettingsField>
-            <FieldLabel>@SettingsLocalization["Google Analytics ID"]</FieldLabel>
-            <FieldBody>
-                <TextEdit @bind-Text="@settings.AnalyticsId" />
-            </FieldBody>
+            <MudFieldLabel>@SettingsLocalization["Google Analytics ID"]</FieldLabel>
+            
+                <MudTextField  @bind-Value="@settings.AnalyticsId" />
+            
         </SettingsField>
         <SettingsField>
-            <FieldBody>
-                <Button Color="Color.Danger" Clicked=RestartApplication>Restart Web Application</Button>
+            
+                <MudButton Color="Color.Error" Clicked=RestartApplication>Restart Web Application</MudButton>
 
-            </FieldBody>
+            
         </SettingsField>
     }
     
     <SettingsField>
-        <FieldBody>
+        
             <Blazorise.Link To="/download/logs" Target="Target.Blank">
-            <Button Color="Color.Primary">Download Logs</Button>
+            <MudButton Color="Color.Primary">Download Logs</MudButton>
             </Blazorise.Link>
 
-        </FieldBody>
+        
     </SettingsField>
         <SettingsField>
-            <FieldBody>
-                <Button Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
-            </FieldBody>
+            
+                <MudButton Type="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+            
         </SettingsField>
-    </Form>
+    </MudForm>
 @code {
 #nullable disable warnings
     AppSettings? settings = new AppSettings();
