--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -58,7 +58,8 @@
 @using BLAZAM.Common.Models.Database.Templates
 @using BLAZAM.Common.Models.Database.Permissions
 
-
+@using MudBlazor
+@*
 @using Blazorise
 @using Blazorise.Extensions
 @using Blazorise.Components
@@ -66,6 +67,6 @@
 @using Blazorise.LoadingIndicator
 @using Blazorise.Snackbar
 @using Blazorise.DataGrid
-
+*@
 @using Microsoft.Extensions.Localization;
 @using BLAZAM.Server.Data.Services.Email;
