--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -6,26 +6,20 @@
 <h3>Templates</h3>
 <SetHeader @ref=Header>
 
-    <Bar Mode="BarMode.Horizontal"
-         CollapseMode="BarCollapseMode.Small"
-         Breakpoint="Breakpoint.Desktop"
-         NavigationBreakpoint="Breakpoint.Tablet"
-         ThemeContrast="ThemeContrast.Dark"
-         Padding="Padding.Is2.OnX"
-         Background="Background.Dark"
-         TextColor="TextColor.Light"
-         VerticalAlignment="VerticalAlignment.Middle">
-        <BarBrand Padding=Padding.Is0.OnY Width="Width.Is100">
+    
             <Row Style="font-size:0.8em;">
-                <Column Style="align-self: center;" ColumnSize="ColumnSize.Is2.OnFullHD.Is2.OnDesktop.Is3.OnTablet">
-                    <Div TextOverflow="TextOverflow.Wrap">
+                <MudContainer Fixed>
+                    <div TextOverflow="TextOverflow.Wrap">
                         Templates
 
-                    </Div>
+                    </div>
 
-                </Column>
-                <Column Style="align-self: center;" ColumnSize="ColumnSize.Is9.OnFullHD.Is8.OnDesktop.Is7.OnTablet" Display="Display.InlineFlex">
-                    <DropdownList TItem="string" TValue="string"
+                </MudContainer>
+                <MudContainer Fixed>
+                    <MudSelectList T="string"
+                                   Values="TemplateCategories"
+                                   @bind-Value="@SelectedCategory" />
+                    @*<DropdownList TItem="string" TValue="string"
                                   Data="@this.TemplateCategories"
                                   TextField="@((item)=>item)"
                                   ValueField="@((item)=>item)"
@@ -40,8 +34,14 @@
                         {
                             @SelectedCategory
                         }
-                    </DropdownList>
-                    <DropdownList TItem="DirectoryTemplate" TValue="DirectoryTemplate"
+                    </DropdownList>*@
+
+                    <MudSelectList
+                        T="@DirectoryTemplate"
+                        Values="Templates"
+                        @bind-Value="@SelectedTemplate"
+                        />
+                    @*<DropdownList TItem="DirectoryTemplate" TValue="DirectoryTemplate"
                                   Data="@this.Templates"
                                   TextField="@((item)=>item.Name)"
                                   ValueField="@((item)=>item)"
@@ -56,33 +56,31 @@
                         {
                             @SelectedTemplate.Name
                         }
-                    </DropdownList>
+                    </DropdownList>*@
 
-                </Column>
-                <Column Style="align-self: center;" ColumnSize="ColumnSize.Is1.OnFullHD.Is2.OnDesktop.Is2.OnTablet">
-                    <Button Float="Float.End" Color=Color.Primary TextColor="TextColor.Light" Clicked="@(()=>{SelectedTemplate = new();})"><Icon Name="IconName.PlusSquare" /></Button>
+                </MudContainer>
+                <MudContainer Fixed>
+                    <MudButton Float="Float.End" Color=Color.Primary  Clicked="@(()=>{SelectedTemplate = new();})"><Icon Name="IconName.PlusSquare" /></MudButton>
                     @if (SelectedCategory != null && SelectedCategory != "All")
                     {
-                        <Button Clicked=@(()=>{RenameModal.Show();}) Color="Color.Primary"><Icon Name="@("fa-solid fa-pen-to-square")" /></Button>
+                        <MudButton Clicked=@(()=>{RenameModal.Show();}) Color="Color.Primary"><Icon Name="@("fa-solid fa-pen-to-square")" /></MudButton>
                     }
                     @if (SelectedTemplate != null)
                     {
-                        <Button Clicked=@(()=>{DuplicateTemplate(SelectedTemplate);}) Color="Color.Primary"><Icon Name="@("fa-solid fa-copy")" /></Button>
+                        <MudButton Clicked=@(()=>{DuplicateTemplate(SelectedTemplate);}) Color="Color.Primary"><Icon Name="@("fa-solid fa-copy")" /></MudButton>
                     }
 
 
-                </Column>
+                </MudContainer>
             </Row>
-        </BarBrand>
-    </Bar>
+     
     <AppModal @ref=RenameModal Title="Rename Category">
-        <Field>
-            <FieldLabel>New Name</FieldLabel>
-            <FieldBody>
-                <TextEdit @bind-Text=newCategoryName />
-            </FieldBody>
-        </Field>
-        <Button Color="Color.Primary" Clicked="RenameSelectedCategory">Save</Button>
+        <MudField>
+            
+                <MudTextField Label="New Name"  @bind-Value=newCategoryName />
+            
+        </MudField>
+        <MudButton Color="Color.Primary" Clicked="RenameSelectedCategory">Save</MudButton>
     </AppModal>
 </SetHeader>
 @if (SelectedTemplate != null)
