--- a/BLAZAM/Pages/Install/InstallDatabase.razor
+++ b/BLAZAM/Pages/Install/InstallDatabase.razor
@@ -22,31 +22,31 @@
     }
 
 }
-<Heading Size="HeadingSize.Is3">Database</Heading>
+<MudText Typo ="Typo.h1" Size="HeadingSize.Is3">Database</MudText>
 @if (!Completed && Monitor.DatabaseUpdatePending)
 {
-    <Div>
-        <Heading Size="HeadingSize.Is5">The database is ready to install.</Heading>
-        <Heading Size="HeadingSize.Is5">Type</Heading><Text>@Context.ConnectionString?.DatabaseType</Text>
-        <Heading Size="HeadingSize.Is5">Server</Heading><Text>@Context.ConnectionString?.ServerAddress</Text>
-        <Heading Size="HeadingSize.Is5">Port</Heading><Text>@Context.ConnectionString?.ServerPort</Text>
-        <Heading Size="HeadingSize.Is5">Database</Heading><Text>@Context.ConnectionString?.Database</Text>
-        <Divider />
+    <div>
+        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">The database is ready to install.</MudText>
+        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">Type</MudText><MudText>@Context.ConnectionString?.DatabaseType</MudText>
+        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">Server</MudText><MudText>@Context.ConnectionString?.ServerAddress</MudText>
+        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">Port</MudText><MudText>@Context.ConnectionString?.ServerPort</MudText>
+        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">Database</MudText><MudText>@Context.ConnectionString?.Database</MudText>
+        <divider />
         <Help>
             Make sure the settings above are as intended. The application should be provided a
             dedicated database. If you are using SQLite as your database option you don't need to worry about this.
         </Help>
         <Progress Max="100" Value="@progressValue" Animated Striped />
         <br />
-        <Button Color="Color.Primary" @onclick="InstallDB">Install</Button>
-    </Div>
+        <MudButton Color="Color.Primary" @onclick="InstallDB">Install</MudButton>
+    </div>
 }
 
 else
 {
-    <Div>
-        <Heading Size="HeadingSize.Is6">Installed</Heading>
-    </Div>
+    <div>
+        <MudText Typo ="Typo.h1" Size="HeadingSize.Is6">Installed</MudText>
+    </div>
 }
 
 @code {
