--- a/BLAZAM/Pages/Users/ConfirmNewUser.razor
+++ b/BLAZAM/Pages/Users/ConfirmNewUser.razor
@@ -3,344 +3,255 @@
 
 
 
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["First Name"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit @bind-Text="@User.GivenName" Disabled=true />
+<MudField>
+    <MudTextField Label="@UserLocalization["First Name"]" @bind-Value="@User.GivenName" Disabled=true />
+</MudField>
 
-    </FieldBody>
-</Field>
+<MudField>
+    <MudTextField Label="@UserLocalization["Middle Name"]" @bind-Value="@User.MiddleName" Disabled=true />
+</MudField>
 
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["Middle Name"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit @bind-Text="@User.MiddleName" Disabled=true />
+<MudField>
+    <MudTextField Label="@UserLocalization["Last Name"]" @bind-Value="@User.Surname" Disabled=true />
+</MudField>
 
-    </FieldBody>
-</Field>
+<MudField>
+    <MudTextField Label="@UserLocalization["Display Name"]" @bind-Value="@User.DisplayName" Disabled=true />
+</MudField>
 
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["Last Name"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit @bind-Text="@User.Surname" Disabled=true />
+<MudField>
+    <MudTextField Label="@UserLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
+</MudField>
 
-    </FieldBody>
-</Field>
+<MudField>
+    <MudTextField Label="@UserLocalization["Password"]" Value="@User.NewPassword.ToPlainText()" Disabled=true />
+</MudField>
 
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["Display Name"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit @bind-Text="@User.DisplayName" Disabled=true />
+<MudField>
+    <MudTextField Label="@UserLocalization["Email Address"]" @bind-Value="@User.Email" Disabled=true />
+</MudField>
 
-    </FieldBody>
-</Field>
-
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["Username"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit @bind-Text="@User.SamAccountName" Disabled=true />
-    </FieldBody>
-</Field>
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["Password"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit Text="@User.NewPassword.ToPlainText()" Disabled=true />
-    </FieldBody>
-</Field>
-<Field Horizontal ColumnSize="FieldColumnSize">
-    <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-        @UserLocalization["Email Address"]
-    </FieldLabel>
-    <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-        <TextEdit @bind-Text="@User.Email" Disabled=true />
-
-    </FieldBody>
-</Field>
 @if (InDirectoryTemplate(ActiveDirectoryFields.EmployeeId) ||
-  InDirectoryTemplate(ActiveDirectoryFields.Department) ||
-  InDirectoryTemplate(ActiveDirectoryFields.Company) ||
-  InDirectoryTemplate(ActiveDirectoryFields.Title) ||
-  InDirectoryTemplate(ActiveDirectoryFields.PhysicalDeliveryOffice)
-  )
+ InDirectoryTemplate(ActiveDirectoryFields.Department) ||
+ InDirectoryTemplate(ActiveDirectoryFields.Company) ||
+ InDirectoryTemplate(ActiveDirectoryFields.Title) ||
+ InDirectoryTemplate(ActiveDirectoryFields.PhysicalDeliveryOffice)
+ )
 {
     <Section Title=@UserLocalization["Organization"]>
         @if (InDirectoryTemplate(ActiveDirectoryFields.EmployeeId))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Employee Id"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.EmployeeId" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Employee Id"]" @bind-Value="@User.EmployeeId" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.Department))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Department"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.Department" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Department"]" @bind-Value="@User.Department" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.Company))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Company"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.Company" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Company"]" @bind-Value="@User.Company" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.Title))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Job Title"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.Title" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Job Title"]" @bind-Value="@User.Title" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.PhysicalDeliveryOffice))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Office"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.PhysicalDeliveryOfficeName" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Office"]" @bind-Value="@User.PhysicalDeliveryOfficeName" Disabled=true />
+
+
+            </MudField>
         }
     </Section>
 }
 
 @if (InDirectoryTemplate(ActiveDirectoryFields.HomePhone) ||
-           InDirectoryTemplate(ActiveDirectoryFields.StreetAddress) ||
-           InDirectoryTemplate(ActiveDirectoryFields.Street) ||
-           InDirectoryTemplate(ActiveDirectoryFields.City) ||
-           InDirectoryTemplate(ActiveDirectoryFields.State) ||
-           InDirectoryTemplate(ActiveDirectoryFields.PostalCode)
-           )
+          InDirectoryTemplate(ActiveDirectoryFields.StreetAddress) ||
+          InDirectoryTemplate(ActiveDirectoryFields.Street) ||
+          InDirectoryTemplate(ActiveDirectoryFields.City) ||
+          InDirectoryTemplate(ActiveDirectoryFields.State) ||
+          InDirectoryTemplate(ActiveDirectoryFields.PostalCode)
+          )
 {
     <Section Title=@UserLocalization["Contact Info"]>
 
         @if (InDirectoryTemplate(ActiveDirectoryFields.HomePhone))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Home Phone"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.HomePhone" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Home Phone"]" @bind-Value="@User.HomePhone" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.StreetAddress))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Street Address"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.StreetAddress" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Street Address"]" @bind-Value="@User.StreetAddress" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.Street))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Street"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.Street" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Street"]" @bind-Value="@User.Street" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.City))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["City"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.City" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["City"]" @bind-Value="@User.City" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.State))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["State"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.State" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["State"]" @bind-Value="@User.State" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.PostalCode))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Zip Code"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.Zip" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Zip Code"]" @bind-Value="@User.Zip" Disabled=true />
+
+
+            </MudField>
         }
     </Section>
 }
 @if (InDirectoryTemplate(ActiveDirectoryFields.Description))
 {
-    <Field Horizontal>
-        <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-            @UserLocalization["Description"]
-        </FieldLabel>
-        <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-            <TextEdit @bind-Text="@User.Description" Disabled=true />
+    <MudField>
 
-        </FieldBody>
-    </Field>
+        <MudTextField Label="@UserLocalization["Description"]" @bind-Value="@User.Description" Disabled=true />
+
+
+    </MudField>
 }
 @if (InDirectoryTemplate(ActiveDirectoryFields.Site))
 {
-    <Field Horizontal>
-        <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-            @UserLocalization["Site"]
-        </FieldLabel>
-        <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-            <TextEdit @bind-Text="@User.Site" Disabled=true />
+    <MudField>
 
-        </FieldBody>
-    </Field>
+        <MudTextField Label="@UserLocalization["Site"]" @bind-Value="@User.Site" Disabled=true />
+
+
+    </MudField>
 }
 @if (InDirectoryTemplate(ActiveDirectoryFields.HomeDirectory) ||
-           InDirectoryTemplate(ActiveDirectoryFields.HomeDrive) ||
-           InDirectoryTemplate(ActiveDirectoryFields.ScriptPath) ||
-           InDirectoryTemplate(ActiveDirectoryFields.ProfilePath)
-           )
+          InDirectoryTemplate(ActiveDirectoryFields.HomeDrive) ||
+          InDirectoryTemplate(ActiveDirectoryFields.ScriptPath) ||
+          InDirectoryTemplate(ActiveDirectoryFields.ProfilePath)
+          )
 {
     <Section Title=@UserLocalization["Profile"]>
         @if (InDirectoryTemplate(ActiveDirectoryFields.HomeDirectory))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Home Directory"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.HomeDirectory" Disabled=true />
+            <MudField>
+                <MudTextField Label="@UserLocalization["Home Directory"]" @bind-Value="@User.HomeDirectory" Disabled=true />
 
-                </FieldBody>
-            </Field>
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.HomeDrive))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Home Drive"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
+            <MudField>
 
-                    <HomeDriveSelect @bind-SelectedValue="@User.HomeDrive" Disabled=true />
 
-                </FieldBody>
-            </Field>
+                <HomeDriveSelect Label="@UserLocalization["Home Drive"]" @bind-SelectedValue="@User.HomeDrive" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.ScriptPath))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Script Path"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.ScriptPath" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Script Path"]" @bind-Value="@User.ScriptPath" Disabled=true />
+
+
+            </MudField>
         }
         @if (InDirectoryTemplate(ActiveDirectoryFields.ProfilePath))
         {
-            <Field Horizontal>
-                <FieldLabel ColumnSize="ColumnSize.Is4.OnTablet">
-                    @UserLocalization["Profile Path"]
-                </FieldLabel>
-                <FieldBody ColumnSize="ColumnSize.Is8.OnTablet">
-                    <TextEdit @bind-Text="@User.ProfilePath" Disabled=true />
+            <MudField>
 
-                </FieldBody>
-            </Field>
+                <MudTextField Label="@UserLocalization["Profile Path"]" @bind-Value="@User.ProfilePath" Disabled=true />
+
+
+            </MudField>
         }
     </Section>
 }
 
 
-<Field ColumnSize="ColumnSize.Is12" Horizontal>
+<MudField ColumnSize="ColumnSize.Is12" Horizontal>
 
-    <FieldBody ColumnSize="ColumnSize.Is12">
-        <Row>
-            @if (User.IsAGroupMember)
+
+    <Row>
+        @if (User.IsAGroupMember)
+        {
+            var deniedRead = false;
+            @foreach (ADGroup g in User.MemberOf.Where(g => g.CanRead))
             {
-                var deniedRead = false;
-                @foreach (ADGroup g in User.MemberOf.Where(g => g.CanRead))
-                {
-                    if (g.CanRead)
-                    {
-                        <Column ColumnSize="ColumnSize.Is6.OnDesktop">
-                            <AssignedGroup AllowUnassign=false AllowNavigation=false Group=g Member="User" OnGroupMembershipChange="@((change)=>{InvokeAsync(StateHasChanged);})" />
-                        </Column>
-                    }
-                    else
-                    {
-                        deniedRead = true;
-                    }
-                }
-
-                if (deniedRead)
+                if (g.CanRead)
                 {
                     <Column ColumnSize="ColumnSize.Is6.OnDesktop">
-                        The user is in more groups you don't have access to
+                        <AssignedGroup AllowUnassign=false AllowNavigation=false Group=g Member="User" OnGroupMembershipChange="@((change)=>{InvokeAsync(StateHasChanged);})" />
                     </Column>
                 }
-
+                else
+                {
+                    deniedRead = true;
+                }
             }
-           
-        </Row>
-    </FieldBody>
-</Field>
-<Button Color="Color.Success" Clicked="ConfirmUser">Create User</Button>
+
+            if (deniedRead)
+            {
+                <Column ColumnSize="ColumnSize.Is6.OnDesktop">
+                    The user is in more groups you don't have access to
+                </Column>
+            }
+
+        }
+
+    </Row>
+
+</MudField>
+<MudButton Color="Color.Success" Clicked="ConfirmUser">Create User</MudButton>
 
 @code {
     [Parameter]
@@ -352,15 +263,18 @@
     bool InDirectoryTemplate(ActiveDirectoryField field)
     {
         if (DirectoryTemplate == null) return true;
-        return DirectoryTemplate?.FieldValues.Any(f => f.Field.FieldName == field.FieldName)==true;
+        return DirectoryTemplate?.FieldValues.Any(f => f.Field.FieldName == field.FieldName) == true;
     }
-    async Task ConfirmUser(){
-        try{
+    async Task ConfirmUser()
+    {
+        try
+        {
             User.CommitChanges();
             await NotificationService.Success("User has been created");
             await Confirmed.InvokeAsync(User);
-             Nav.NavigateTo("/search/" + User.SamAccountName);
-        }catch(ApplicationException ex)
+            Nav.NavigateTo("/search/" + User.SamAccountName);
+        }
+        catch (ApplicationException ex)
         {
             await MessageService.Error(ex.Message);
         }
