--- a/BLAZAM/Pages/_Layout.cshtml
+++ b/BLAZAM/Pages/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/x-icon" href=@StaticAssets.FaviconUri>
     <link href="css/site.css" rel="stylesheet" />
     <link href="BLAZAM.styles.css" rel="stylesheet" />
+    @*
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
@@ -22,7 +23,12 @@
     <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet" />
     <link href="_content/Blazorise.LoadingIndicator/blazorise.loadingindicator.css" rel="stylesheet" />
     <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
-    
+    *@
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 
@@ -32,7 +38,7 @@
 
 <body>
     @RenderBody()
-    
+
     <div id="blazor-error-ui">
         @if (!Program.InDebugMode)
         {
@@ -40,8 +46,8 @@
         }
         else
         {
-            <strong>An unhandled exception has occurred.See browser dev tools for details.</strong >
-                
+            <strong>An unhandled exception has occurred.See browser dev tools for details.</strong>
+
         }
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
@@ -61,9 +67,9 @@
         });
     </script>
 
-    @if (DatabaseCache.ApplicationSettings?.AnalyticsId.IsNullOrEmpty()==false)
+    @if (DatabaseCache.ApplicationSettings?.AnalyticsId.IsNullOrEmpty() == false)
     {
-    <!-- Blazam Installation Google tag (gtag.js) -->
+        <!-- Blazam Installation Google tag (gtag.js) -->
 
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-415DR9ZVBH"></script>
         <script>
@@ -78,7 +84,7 @@
         </script>
     }
     <script src="~/js/blazam.js"></script>
-  
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
 </body>
 </html>
