--- a/BLAZAM/Shared/UI/Dashboard/Widgets/DisabledUsersWidget.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/DisabledUsersWidget.razor
@@ -1,14 +1,14 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-<Div Background="Background.Secondary" TextColor="TextColor.Light">
+<div Background="Background.Secondary" >
 
     <h3>Disabled users changed in the last 90 days</h3>
 
-    <Div Overflow="Overflow.Auto" Style="max-height:350px;">
+    <div Overflow="Overflow.Auto" Style="max-height:350px;">
         @foreach (var user in LockedUsers)
         {
 
-            <Card Background="Background.Dark" TextColor="TextColor.Light" @onclick="@(()=>{Nav.NavigateTo("/users/search/" + user.SamAccountName);})">
+            <MudCard Background="Background.Dark"  @onclick="@(()=>{Nav.NavigateTo("/users/search/" + user.SamAccountName);})">
 
 
                 @user.DisplayName <br>
@@ -16,11 +16,11 @@
                 @DirectoryTools.PrettifyOu(user.OU) <br>
 
                 @user.LastChanged <br>
-            </Card>
+            </MudCard>
 
         }
-    </Div>
-</Div>
+    </div>
+</div>
 @code {
     List<IADUser> LockedUsers = new();
 
