--- a/BLAZAM/Shared/UI/Dashboard/Widgets/NewUsersWidget.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/NewUsersWidget.razor
@@ -1,22 +1,22 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-<Div Background="Background.Secondary" TextColor="TextColor.Light">
+<div Background="Background.Secondary" >
 
     <h3>Users created in the last 90 days</h3>
 
-    <Div Overflow="Overflow.Auto" Style="max-height:350px;">
+    <div Overflow="Overflow.Auto" Style="max-height:350px;">
         @foreach (var user in NewUsers)
         {
 
-            <Div Background="Background.Secondary" TextColor="TextColor.Light" Style="cursor:pointer" @onclick="@(()=>{Nav.NavigateTo(user.SearchUri);})">
+            <div Background="Background.Secondary"  Style="cursor:pointer" @onclick="@(()=>{Nav.NavigateTo(user.SearchUri);})">
 
 
                <UserListItem User="user"/>
-            </Div>
+            </div>
 
         }
-    </Div>
-</Div>
+    </div>
+</div>
 @code {
     List<IADUser> NewUsers = new();
 
