--- a/BLAZAM/Shared/UI/Groups/AddMemberModalContent.razor
+++ b/BLAZAM/Shared/UI/Groups/AddMemberModalContent.razor
@@ -1,26 +1,26 @@
 ﻿@inherits AppModalContent
 
 
-<Row Background="Background.Light" TextColor="TextColor.Dark">
-    <Field>
-        <FieldLabel>Member</FieldLabel>
+<Row Background="Background.Light" TextColor="Color.Dark">
+    <MudField>
+        <MudFieldLabel>Member</FieldLabel>
         <ADAutoComplete @bind-SelectedResult="@Entry" />
-    </Field>
-    <Field>
-        <FieldLabel>Copy Memberships From</FieldLabel>
+    </MudField>
+    <MudField>
+        <MudFieldLabel>Copy Memberships From</FieldLabel>
         <ADAutoComplete SearchObjectType="ActiveDirectoryObjectType.Group"
                         @bind-SelectedResult=@copyFrom
                         CustomResultsFilter="(result)=>result is IADGroup" />
-    </Field>
+    </MudField>
     @if (CopyFrom != null)
     {
         var existingMembers = Group.UserMembers;
-        <Paragraph>Will be assigned...</Paragraph>
+        <MudText>Will be assigned...</MudText>
 
         foreach (var member in CopyFrom.UserMembers)
         {
-            <Card>
-                <CardHeader>
+            <MudCard>
+                <MudCardHeader>
 
                     @if (existingMembers.Contains(member))
                     {
@@ -32,13 +32,13 @@
                     }
                     @member.CanonicalName
 
-                </CardHeader>
-            </Card>
+                </MudCardHeader>
+            </MudCard>
         }
     }
 </Row>
 <Row>
-    <Button Color="Color.Primary" Clicked="AssignToGroup">Add</Button>
+    <MudButton Color="Color.Primary" Clicked="AssignToGroup">Add</MudButton>
 
 </Row>
 
