--- a/BLAZAM/Shared/UI/Groups/AssignedGroup.razor
+++ b/BLAZAM/Shared/UI/Groups/AssignedGroup.razor
@@ -1,43 +1,43 @@
 ﻿@inherits DirectoryModelComponent
 
-<Card Background="Background.Light" TextColor="TextColor.Dark">
+<MudCard Background="Background.Light" TextColor="Color.Dark">
     @if (Group != null)
     {
         var linkAdd = "/groups/search/" + Group.GroupName;
-        <CardHeader>
-            <Paragraph Style="cursor:pointer;" Display=Display.InlineBlock onclick="@(()=>{
+        <MudCardHeader>
+            <MudText Style="cursor:pointer;" Display=Display.InlineBlock onclick="@(()=>{
             if(AllowNavigation)
              Nav.NavigateTo(Group.SearchUri);
             })">
                 @Group.GroupName
 
-            </Paragraph>
+            </MudText>
             @if (AllowUnassign)
             {
-                <Button Float=Float.End Color="Color.Danger" Clicked="RemoveFromGroup"><Icon Name="@("fa-times")" /></Button>
+                <MudButton Float=Float.End Color="Color.Error" Clicked="RemoveFromGroup"><Icon Name="@("fa-times")" /></MudButton>
             }
-        </CardHeader>
+        </MudCardHeader>
     }
 
     else
     {
-        <CardHeader>
+        <MudCardHeader>
             <Accordion>
                 <Collapse Visible="@collapse1Visible">
                     <CollapseHeader>
-                        <Heading Size="HeadingSize.Is5">
+                        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">
 
-                            <Button Clicked="@(()=>collapse1Visible = !collapse1Visible)">
+                            <MudButton Clicked="@(()=>collapse1Visible = !collapse1Visible)">
                                 @Group.GroupName
                                 @if (AllowUnassign)
                                 {
-                                    <Button Color="Color.Danger" Clicked="RemoveFromGroup"><Icon Name="@("fa-times")" /></Button>
+                                    <MudButton Color="Color.Error" Clicked="RemoveFromGroup"><Icon Name="@("fa-times")" /></MudButton>
 
                                 }
 
-                            </Button>
+                            </MudButton>
 
-                        </Heading>
+                        </MudText>
 
                     </CollapseHeader>
                     <CollapseBody>
@@ -70,10 +70,10 @@
                 </Collapse>
 
             </Accordion>
-        </CardHeader>
+        </MudCardHeader>
 
     }
-</Card>
+</MudCard>
 
 @code {
 
