--- a/BLAZAM/Shared/UI/Outputs/Base64Image.razor
+++ b/BLAZAM/Shared/UI/Outputs/Base64Image.razor
@@ -4,7 +4,7 @@
         base64 = Convert.ToBase64String(Data);
 
 }
-<Image Style="max-height:100%;max-width:100%;"  Source=@("data:image/png;base64,"+@base64)/>
+<MudImage Style="max-height:100%;max-width:100%;"  Source=@("data:image/png;base64,"+@base64)/>
 
 @code {
     [Parameter]
