--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -4,88 +4,47 @@
 
 
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
-    <Heading>@SettingsLocalization["Authentication Settings"]</Heading>
-    <Form @onsubmit=Save>
-        <Validations Mode="ValidationMode.Auto" Model="@settings" StatusChanged="OnValidation">
-
-            <Validation Validator="AppValidationRule.IsNotEmpty">
-                <SettingsField>
-                    <FieldLabel>@SettingsLocalization["Admin Password"]</FieldLabel>
-                    <FieldBody>
-                        <TextEdit Role="TextRole.Password" @bind-Text="newAdminPassword">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </SettingsField>
-            </Validation>
-            <Validation>
-
-                <SettingsField>
-                    <FieldLabel>@SettingsLocalization["Session Timeout"]</FieldLabel>
-                    <FieldHelp>Time in minutes</FieldHelp>
-                    <FieldBody>
-                        <NumericPicker TValue="int?" @bind-Value="@settings.SessionTimeout">
-
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </NumericPicker>
+    <MudText Typo="Typo.h1">@SettingsLocalization["Authentication Settings"]</MudText>
+    <MudForm @onsubmit=Save>
 
 
-                    </FieldBody>
-                </SettingsField>
-            </Validation>
+        <SettingsField>
 
-            <Text>Duo Security MFA (optional)</Text>
-            <hr />
-            <Validation>
-                <SettingsField>
-                    <FieldLabel>Duo ClientID</FieldLabel>
-                    <FieldBody>
-                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientId">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </SettingsField>
-            </Validation>
-            <Validation>
-                <SettingsField>
-                    <FieldLabel>Duo ClientSecret</FieldLabel>
-                    <FieldBody>
-                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoClientSecret">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </SettingsField>
-            </Validation>
-            <Validation>
-                <SettingsField>
-                    <FieldLabel>Duo ApiHost</FieldLabel>
-                    <FieldBody>
-                        <TextEdit Role="TextRole.Password" @bind-Text="@settings.DuoApiHost">
-                            <Feedback>
-                                <ValidationError />
-                            </Feedback>
-                        </TextEdit>
-                    </FieldBody>
-                </SettingsField>
-            </Validation>
-            <SettingsField>
-                <FieldBody>
-                    <Button Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</Button>
-                </FieldBody>
-            </SettingsField>
+            <MudTextField Label="@SettingsLocalization["Admin Password"]" InputType="InputType.Password" @bind-Value="newAdminPassword" />
+        </SettingsField>
+
+        <SettingsField>
+
+            <MudNumericField Label="@SettingsLocalization["Session Timeout"]" HelperText="Time in minute" TValue="int?" @bind-Value="@settings.SessionTimeout" />
+
+        </SettingsField>
+
+        <MudText>Duo Security MFA (optional)</MudText>
+        <br />
+        <SettingsField>
+
+                <MudTextField Label="Duo ClientID" InputType="InputType.Password" @bind-Value="@settings.DuoClientId"/>
+
+        </SettingsField>
+        <SettingsField>
+
+                <MudTextField Label="Duo ClientSecret" InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret"/>
+
+        </SettingsField>
+        <SettingsField>
+
+                <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost"/>
+
+        </SettingsField>
+        <SettingsField>
+
+            <MudButton Disabled="saveDisabled" Type="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+
+        </SettingsField>
 
 
 
-        </Validations>
-    </Form>
+    </MudForm>
 </LoadingIndicator>
 @code {
 #nullable disable warnings
