--- a/BLAZAM/Shared/UI/Settings/Permissions/AccessLevelEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/AccessLevelEditor.razor
@@ -1,8 +1,8 @@
 @inherits AppComponentBase
 
-<Heading Size="HeadingSize.Is3">
+<MudText Typo ="Typo.h1" Size="HeadingSize.Is3">
     @SettingsLocalization["Access Levels"]
-</Heading>
+</MudText>
 <p> Access levels are a template of permissions that can be applied to specific OU's for specific delegates.</p>
 <LoadingIndicator Visible=LoadingData>
 
@@ -18,9 +18,9 @@
 
         <Collapse Visible="@addCollapseVisible">
             <CollapseHeader>
-                <Heading Size="HeadingSize.Is5">
-                    <Button Background=Background.Success TextColor=TextColor.Light Clicked="@(()=>addCollapseVisible = !addCollapseVisible)">@SettingsLocalization["Add New Access Level"]</Button>
-                </Heading>
+                <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">
+                    <MudButton Background=Background.Success TextColor=Color.Light Clicked="@(()=>addCollapseVisible = !addCollapseVisible)">@SettingsLocalization["Add New Access Level"]</MudButton>
+                </MudText>
             </CollapseHeader>
             <CollapseBody>
 
