--- a/BLAZAM/Shared/UI/Settings/Permissions/DelegateEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/DelegateEditor.razor
@@ -10,12 +10,12 @@
     <ListGroup>
         <Row>
             <Column ColumnSize="ColumnSize.Is10.OnTablet">
-                <TextEdit Display=Display.InlineFlex Placeholder="Filter Delegates" @bind-Text="@GroupFilter" />
+                <MudTextField  Display=Display.InlineFlex Placeholder="Filter Delegates" @bind-Value="@GroupFilter" />
 
             </Column>
 
             <Column ColumnSize="ColumnSize.Is2.OnTablet">
-                <Button Color=Color.Secondary Float=Float.End Display=Display.InlineFlex Clicked="(()=>{trashModal.Show();})"><Icon Name=IconName.Delete /></Button>
+                <MudButton Color=Color.Secondary Float=Float.End Display=Display.InlineFlex Clicked="(()=>{trashModal.Show();})"><Icon Name=IconName.Delete /></MudButton>
 
             </Column>
         </Row>
@@ -33,9 +33,9 @@
         }
         <ListGroupItem Name="AddUserGroup">
 
-            <Button Background="Background.Success" TextColor="TextColor.Light" Clicked="@ShowAddGroup">
+            <MudButton Background="Background.Success"  Clicked="@ShowAddGroup">
                 @SettingsLocalization["Create New Delegation Target"]
-            </Button>
+            </MudButton>
         </ListGroupItem>
 
     </ListGroup>
@@ -46,11 +46,11 @@
             <Row>
                 <Column>
                     <Strong>@model.ObjectType</Strong><br />
-                    <Text>@model.CanonicalName</Text>
-                    <Text>@deleg.DeletedAt</Text>
+                    <MudText>@model.CanonicalName</MudText>
+                    <MudText>@deleg.DeletedAt</MudText>
                 </Column>
                 <Column>
-                    <Button Float="Float.End" Color="Color.Primary" Clicked="(()=>{RestoreDelegate(deleg);})">Restore</Button>
+                    <MudButton Float="Float.End" Color="Color.Primary" Clicked="(()=>{RestoreDelegate(deleg);})">Restore</MudButton>
                 </Column>
 
             </Row>
