--- a/BLAZAM/Shared/UI/Settings/Permissions/OUPrivilegeEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/OUPrivilegeEditor.razor
@@ -1,27 +1,27 @@
 @inherits ValidatedForm
 
-<Card>
-    <CardHeader>
+<MudCard>
+    <MudCardHeader>
         @OU?.Name
-    </CardHeader>
-    <CardBody>
+    </MudCardHeader>
+    <MudCardBody>
         @if (inheritedMappings.Count > 0)
         {
             <Accordion>
                 <Collapse Visible="@collapseVisible">
                     <CollapseHeader>
-                        <Heading Size="HeadingSize.Is5">
-                            <Button Clicked="@(()=>collapseVisible = !collapseVisible)">@SettingsLocalization["Inherited Permissions"]</Button>
-                        </Heading>
+                        <MudText Typo ="Typo.h1" Size="HeadingSize.Is5">
+                            <MudButton Clicked="@(()=>collapseVisible = !collapseVisible)">@SettingsLocalization["Inherited Permissions"]</MudButton>
+                        </MudText>
                     </CollapseHeader>
                     <CollapseBody>
                         @foreach (var map in inheritedMappings)
                         {
-                            <Card>
-                                <CardBody>
+                            <MudCard>
+                                <MudCardBody>
                                     <PermissionMapEditor Map="map" ReadOnly=true />
-                                </CardBody>
-                            </Card>
+                                </MudCardBody>
+                            </MudCard>
                         }
                     </CollapseBody>
             </Collapse>
@@ -36,11 +36,11 @@
         {
             <PermissionMapEditor MappingDeleted="@(()=>{RefreshData();})" Map="NewMapping" />
         }
-    </CardBody>
-    <CardFooter>
-        <Button Clicked="AddNewMapping" Color="Color.Success">Add new mapping</Button>
-    </CardFooter>
-</Card>
+    </MudCardBody>
+    <MudCardFooter>
+        <MudButton Clicked="AddNewMapping" Color="Color.Success">Add new mapping</MudButton>
+    </MudCardFooter>
+</MudCard>
 
 
 @code {
