--- a/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAM/Shared/UI/Users/ChangeUserPasswordModalContent.razor
@@ -1,70 +1,70 @@
 ﻿@inherits AppModalContent
-<Div Background="Background.Light" TextColor="TextColor.Dark">
+<div Background="Background.Light" TextColor="Color.Dark">
     <SettingsField>
-        <FieldLabel>
+        <MudFieldLabel>
             @UserLocalization["Username"]
         </FieldLabel>
-        <FieldBody>
-            <TextEdit @bind-Text="@User.SamAccountName" Disabled=true />
+        
+            <MudTextField  @bind-Value="@User.SamAccountName" Disabled=true />
 
-        </FieldBody>
+        
     </SettingsField>
 
     <SettingsField>
-        <FieldLabel>
+        <MudFieldLabel>
             @UserLocalization["Email Address"]
         </FieldLabel>
-        <FieldBody>
-            <TextEdit @bind-Text="@User.Email" Disabled=true />
+        
+            <MudTextField  @bind-Value="@User.Email" Disabled=true />
 
-        </FieldBody>
+        
     </SettingsField>
 
     <Validation Validator="ValidationRule.IsNotEmpty">
         <SettingsField>
-            <FieldLabel>
+            <MudFieldLabel>
                 @UserLocalization["Password"]
             </FieldLabel>
-            <FieldBody>
-                <TextEdit Role="TextRole.Password" @bind-Text="@newPassword">
-                    <Feedback>
+            
+                <MudTextField  InputType="InputType.Password" @bind-Value="@newPassword">
+                    
                         <ValidationError>Password cannot be blank</ValidationError>
-                    </Feedback>
-                </TextEdit>
+                    
+                </MudTextField >
 
-            </FieldBody>
+            
         </SettingsField>
     </Validation>
     <Validation Validator="@ValidateName">
         <SettingsField>
-            <FieldLabel>
+            <MudFieldLabel>
                 @UserLocalization["Password"]
             </FieldLabel>
-            <FieldBody>
-                <TextEdit Role="TextRole.Password" @bind-Text="@newPasswordConfirm">
-                    <Feedback>
+            
+                <MudTextField  InputType="InputType.Password" @bind-Value="@newPasswordConfirm">
+                    
                         <ValidationError>Passwords must match</ValidationError>
-                    </Feedback>
-                </TextEdit>
+                    
+                </MudTextField >
 
-            </FieldBody>
+            
         </SettingsField>
     </Validation>
     <SettingsField>
-        <FieldLabel>
+        <MudFieldLabel>
             @UserLocalization["Require change"]
         </FieldLabel>
-        <FieldHelp>
+        <MudFieldHelp>
             Require the user to change their password at next logona
         </FieldHelp>
-        <FieldBody>
-            <Switch TValue="bool" @ref=requireChangeSwitch/>
+        
+            <MudSwitch TValue="bool" @ref=requireChangeSwitch/>
 
-        </FieldBody>
+        
 
     </SettingsField>
-    <Button Color=Color.Primary Disabled=!PasswordsValid Clicked="SaveChanges">@UserLocalization["Change Password"]</Button>
-</Div>
+    <MudButton Color=Color.Primary Disabled=!PasswordsValid Clicked="SaveChanges">@UserLocalization["Change Password"]</MudButton>
+</div>
 @code {
 #nullable disable warnings
     string newPassword;
